src/objects/ACED_Integration_Console__c.object
<CustomObject>
    <fields>
        <fullName>RN_Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RN_Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>RN_UserName__c</fullName>
        <inlineHelpText>This is a helptext for UserName</inlineHelpText>
        <label>UserName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RightNow_Admin_Email__c</fullName>
        <inlineHelpText>Enter multiple email ids seperated by ; 
Eg : mike@gmail.com;denny@yahoo.com</inlineHelpText>
        <label>RightNow Admin Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WebTrends_Admin_Email__c</fullName>
        <inlineHelpText>Enter multiple email ids seperated by ;
Eg : mike@gmail.com;denny@yahoo.com</inlineHelpText>
        <label>WebTrends Admin Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WebTrends_Service_URL__c</fullName>
        <inlineHelpText>This is a helptext for WebTrends Service URL</inlineHelpText>
        <label>WebTrends Service URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Web_Password__c</fullName>
        <inlineHelpText>This is a helptext for Password</inlineHelpText>
        <label>Password</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Web_UserName__c</fullName>
        <inlineHelpText>This is a helptext for UserName</inlineHelpText>
        <label>UserName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Integration Console</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Integration Console Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Console</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>